# cashu-marketplace

./: .env.example  .gitignore  Cargo.toml  README.md  config.toml
migrations/: 001_initial.sql
src/: config.rs  error.rs  main.rs
src/db/: mod.rs
src/middleware/: auth.rs  browsing_fee.rs  mod.rs
src/models/: escrow.rs  listing.rs  mod.rs  order.rs  user.rs
src/routes/: admin.rs  auth.rs  cart.rs  home.rs  listings.rs  mod.rs  orders.rs  seller.rs  wallet.rs
src/services/: cashu.rs  escrow.rs  mod.rs  nostr.rs
static/: style.css
templates/: base.html  home.html
templates/admin/: dashboard.html  dispute_detail.html  disputes.html
templates/auth/: login.html  register.html
templates/cart/: checkout.html  show.html
templates/listings/: index.html  new.html  show.html
templates/orders/: index.html  show.html
templates/seller/: become_seller.html  categories.html  dashboard.html  orders.html
templates/wallet/: deposit.html  show.html  withdraw.html
